[gd_scene load_steps=15 format=2]

[ext_resource path="res://pck/scenes/slots.gd" type="Script" id=1]
[ext_resource path="res://pck/assets/HomeScence/image-main-background.png" type="Texture" id=2]
[ext_resource path="res://pck/assets/menu/shweshan.png" type="Texture" id=3]
[ext_resource path="res://pck/assets/slots/ARROW 2.png" type="Texture" id=4]
[ext_resource path="res://start/button.gd" type="Script" id=5]
[ext_resource path="res://pck/assets/HomeScence/icon-bottom-bar.png" type="Texture" id=6]
[ext_resource path="res://pck/assets/menu/icon-main-back.png" type="Texture" id=7]
[ext_resource path="res://pck/assets/common/zawgyi-one.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://pck/assets/HomeScence/icon-home-money.png" type="Texture" id=9]
[ext_resource path="res://pck/assets/slots/SLOTS.png" type="Texture" id=10]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("slotContainer_1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 160, 180 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("slotContainer_2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2000, 148 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "left"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("slotContainer_1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1910, 180 ), Vector2( 160, 180 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("slotContainer_2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 130, 180 ), Vector2( 2000, 180 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "right"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("slotContainer_1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 180 ), Vector2( -1910, 180 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("slotContainer_2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2000, 180 ), Vector2( 130, 180 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 25
use_filter = true
font_data = ExtResource( 8 )

[node name="slots" type="Node2D"]
script = ExtResource( 1 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 1001.5, 451.5 )
scale = Vector2( 0.86849, 0.839815 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Icon-bottom-bar" type="Sprite" parent="."]
position = Vector2( 1014, 0 )
texture = ExtResource( 6 )

[node name="slotContainer_1" type="VBoxContainer" parent="."]
margin_left = 160.0
margin_top = 180.0
margin_right = 1860.0
margin_bottom = 910.0

[node name="slotProviderContainer" type="GridContainer" parent="slotContainer_1"]
margin_right = 1700.0
margin_bottom = 610.0
grow_vertical = 0
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 5

[node name="chin shit huang" type="TextureButton" parent="slotContainer_1/slotProviderContainer"]
margin_right = 280.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="aliBaba" type="TextureButton" parent="slotContainer_1/slotProviderContainer"]
margin_left = 330.0
margin_right = 610.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="crazy hunter" type="TextureButton" parent="slotContainer_1/slotProviderContainer"]
margin_left = 660.0
margin_right = 940.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="fortune gems" type="TextureButton" parent="slotContainer_1/slotProviderContainer"]
margin_left = 990.0
margin_right = 1270.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="golden empire" type="TextureButton" parent="slotContainer_1/slotProviderContainer"]
margin_left = 1320.0
margin_right = 1600.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="boxing king" type="TextureButton" parent="slotContainer_1/slotProviderContainer"]
margin_top = 330.0
margin_right = 280.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="money coming" type="TextureButton" parent="slotContainer_1/slotProviderContainer"]
margin_left = 330.0
margin_top = 330.0
margin_right = 610.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="superace" type="TextureButton" parent="slotContainer_1/slotProviderContainer"]
margin_left = 660.0
margin_top = 330.0
margin_right = 940.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="charge buffalo" type="TextureButton" parent="slotContainer_1/slotProviderContainer"]
margin_left = 990.0
margin_top = 330.0
margin_right = 1270.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="dragon treasure" type="TextureButton" parent="slotContainer_1/slotProviderContainer"]
margin_left = 1320.0
margin_top = 330.0
margin_right = 1600.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="slotContainer_2" type="VBoxContainer" parent="."]
margin_left = 2000.0
margin_top = 148.0
margin_right = 3700.0
margin_bottom = 878.0

[node name="slotProviderContainer" type="GridContainer" parent="slotContainer_2"]
margin_right = 1700.0
margin_bottom = 610.0
grow_vertical = 0
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 5

[node name="golden bank" type="TextureButton" parent="slotContainer_2/slotProviderContainer"]
margin_right = 280.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="feng shen" type="TextureButton" parent="slotContainer_2/slotProviderContainer"]
margin_left = 330.0
margin_right = 610.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="diamond party" type="TextureButton" parent="slotContainer_2/slotProviderContainer"]
margin_left = 660.0
margin_right = 940.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="fortune pig" type="TextureButton" parent="slotContainer_2/slotProviderContainer"]
margin_left = 990.0
margin_right = 1270.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="bao boon shin" type="TextureButton" parent="slotContainer_2/slotProviderContainer"]
margin_left = 1320.0
margin_right = 1600.0
margin_bottom = 280.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="bubble beauty" type="TextureButton" parent="slotContainer_2/slotProviderContainer"]
margin_top = 330.0
margin_right = 280.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="777" type="TextureButton" parent="slotContainer_2/slotProviderContainer"]
margin_left = 330.0
margin_top = 330.0
margin_right = 610.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="shanghai beauty" type="TextureButton" parent="slotContainer_2/slotProviderContainer"]
margin_left = 660.0
margin_top = 330.0
margin_right = 940.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="chin shi haung" type="TextureButton" parent="slotContainer_2/slotProviderContainer"]
margin_left = 990.0
margin_top = 330.0
margin_right = 1270.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="jili caishen" type="TextureButton" parent="slotContainer_2/slotProviderContainer"]
margin_left = 1320.0
margin_top = 330.0
margin_right = 1600.0
margin_bottom = 610.0
rect_min_size = Vector2( 280, 280 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="Left" type="TextureButton" parent="."]
margin_left = 20.0
margin_top = 419.0
margin_right = 100.0
margin_bottom = 599.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 4
flip_h = true
script = ExtResource( 5 )

[node name="Right" type="TextureButton" parent="."]
margin_left = 1850.0
margin_top = 415.0
margin_right = 1930.0
margin_bottom = 595.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 4
script = ExtResource( 5 )

[node name="slotAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/left = SubResource( 3 )
anims/right = SubResource( 1 )

[node name="Back" type="TextureButton" parent="."]
margin_right = 220.0
margin_bottom = 135.0
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 4

[node name="Balance_Boarder" type="Sprite" parent="."]
position = Vector2( 492, 46 )
scale = Vector2( 0.589109, 0.589109 )
texture = ExtResource( 9 )

[node name="Balance" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 397.0
margin_top = 33.0
margin_right = -1456.0
margin_bottom = -826.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1

[node name="Slots" type="Sprite" parent="."]
position = Vector2( 1820, 45 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 10 )

[connection signal="pressed" from="slotContainer_1/slotProviderContainer/chin shit huang" to="." method="_on_slot_pressed" binds= [ "Chin Shi Huang", "JILI-SLOT-003" ]]
[connection signal="pressed" from="slotContainer_1/slotProviderContainer/aliBaba" to="." method="_on_slot_pressed" binds= [ "Alibaba", "JILI-SLOT-049" ]]
[connection signal="pressed" from="slotContainer_1/slotProviderContainer/crazy hunter" to="." method="_on_slot_pressed" binds= [ "Crazy Hunter", "JILI-SLOT-045" ]]
[connection signal="pressed" from="slotContainer_1/slotProviderContainer/fortune gems" to="." method="_on_slot_pressed" binds= [ "Fortune Gems", "JILI-SLOT-043" ]]
[connection signal="pressed" from="slotContainer_1/slotProviderContainer/golden empire" to="." method="_on_slot_pressed" binds= [ "Golden Empire", "JILI-SLOT-042" ]]
[connection signal="pressed" from="slotContainer_1/slotProviderContainer/boxing king" to="." method="_on_slot_pressed" binds= [ "Boxing King", "JILI-SLOT-031" ]]
[connection signal="pressed" from="slotContainer_1/slotProviderContainer/money coming" to="." method="_on_slot_pressed" binds= [ "Money Coming", "JILI-SLOT-029" ]]
[connection signal="pressed" from="slotContainer_1/slotProviderContainer/superace" to="." method="_on_slot_pressed" binds= [ "Super Ace", "JILI-SLOT-027" ]]
[connection signal="pressed" from="slotContainer_1/slotProviderContainer/charge buffalo" to="." method="_on_slot_pressed" binds= [ "Charge Buffalo", "JILI-SLOT-026" ]]
[connection signal="pressed" from="slotContainer_1/slotProviderContainer/dragon treasure" to="." method="_on_slot_pressed" binds= [ "Dragon Treasure", "JILI-SLOT-025" ]]
[connection signal="pressed" from="slotContainer_2/slotProviderContainer/golden bank" to="." method="_on_slot_pressed" binds= [ "Goldenbank", "JILI-SLOT-023" ]]
[connection signal="pressed" from="slotContainer_2/slotProviderContainer/feng shen" to="." method="_on_slot_pressed" binds= [ "Fengshen", "JILI-SLOT-022" ]]
[connection signal="pressed" from="slotContainer_2/slotProviderContainer/diamond party" to="." method="_on_slot_pressed" binds= [ "DiamondParty", "JILI-SLOT-021" ]]
[connection signal="pressed" from="slotContainer_2/slotProviderContainer/fortune pig" to="." method="_on_slot_pressed" binds= [ "FortunePig", "JILI-SLOT-019" ]]
[connection signal="pressed" from="slotContainer_2/slotProviderContainer/bao boon shin" to="." method="_on_slot_pressed" binds= [ "Bao boon chin", "JILI-SLOT-016" ]]
[connection signal="pressed" from="slotContainer_2/slotProviderContainer/bubble beauty" to="." method="_on_slot_pressed" binds= [ "Bubble Beauty", "JILI-SLOT-015" ]]
[connection signal="pressed" from="slotContainer_2/slotProviderContainer/777" to="." method="_on_slot_pressed" binds= [ "Crazy777", "JILI-SLOT-014" ]]
[connection signal="pressed" from="slotContainer_2/slotProviderContainer/shanghai beauty" to="." method="_on_slot_pressed" binds= [ "Shanghai Beauty", "JILI-SLOT-008" ]]
[connection signal="pressed" from="slotContainer_2/slotProviderContainer/chin shi haung" to="." method="_on_slot_pressed" binds= [ "Chin Shi Huang", "JILI-SLOT-003" ]]
[connection signal="pressed" from="slotContainer_2/slotProviderContainer/jili caishen" to="." method="_on_slot_pressed" binds= [ "JILI CAISHEN", "JILI-SLOT-060" ]]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="animation_finished" from="slotAnimation" to="." method="_on_slotAnimation_animation_finished"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
